--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </svg>
 
     <svg viewBox="0 0 100 100" style="border: solid black;">
-        <!-- <path stroke="green" stroke-width="0.2" d="M10 0 V100" />
+        <path stroke="green" stroke-width="0.2" d="M10 0 V100" />
         <path stroke="green" stroke-width="0.2" d="M20 0 V100" />
         <path stroke="green" stroke-width="0.2" d="M30 0 V100" />
         <path stroke="green" stroke-width="0.2" d="M40 0 V100" />
@@ -90,7 +90,7 @@
         <path stroke="green" stroke-width="0.2" d="M0 60 H100" />
         <path stroke="green" stroke-width="0.2" d="M0 70 H100" />
         <path stroke="green" stroke-width="0.2" d="M0 80 H100" />
-        <path stroke="green" stroke-width="0.2" d="M0 90 H100" /> -->
+        <path stroke="green" stroke-width="0.2" d="M0 90 H100" />
         
         <path stroke="none" fill="#ffbf00" stroke-width="1" d="M30 43 A1 1.1, 0, 0 1, 70 43"/>
         <circle cx="44" cy="26" r="0.01" stroke="black"/>
